# SoftUni-CPP-Fundamentals

./: .gitignore  CMakeLists.txt  README.md
01. Basic Syntax/Homework/: 07. Factorial Trailing Zeroes.cpp
01. Basic Syntax/Judge/: 03. Quadratic Equation.cpp  04. 1 to N.cpp  06. Greatest Common Divisor.cpp
02. Functions, Arrays and Vectors/JA1/: 01. Pipes.cpp  03. Bus.cpp
02. Functions, Arrays and Vectors/Judge/: 01. Compare Arrays.cpp  02. Longest Sequence.cpp  03. Above Average.cpp  04. Most Frequent Number.cpp  05. Cartesian Product.cpp  06. Closest Numbers.cpp
03. Strings and Streams/Judge/: 01. Compare Arrays Again.cpp  02. Mathematical Expression.cpp  03. Title Case.cpp  04. Replace All.cpp  05. Invalid Input.cpp  06. The Signal and the Noise.cpp  07. The Noise and the Signal.cpp
04. Linear Containers/Homework/: 01. CompareMatrices.cpp  02. PositionsOf.cpp  03. MergeTrains.cpp
04. Linear Containers/JA2/: 04. TheMatrix.cpp  04. TheMatrixWithTemplates.cpp
04. Linear Containers/Judge/: 01. FinedEvensInDualArray.cpp
04. Linear Containers/Judge 2020/: 01. CompareMatrices.cpp  02. PositionsOf.cpp  04. Brackets.cpp
05. STL Associative Containers/Homework/: 02. OddOccurrences.cpp  07. Miners.cpp
05. STL Associative Containers/Judge/: 07. Miners.cpp
06. Classes and Objects/Homework - 2019/: 01. SentenceShifter.cpp  01. SentenceShifter2.cpp
06. Classes and Objects/JA3-2017.12.23/01. Big Division/: 01. Big Division.cpp
06. Classes and Objects/JA3-2017.12.23/02. Near Cities/: 02. Near Cities.cpp
06. Classes and Objects/JA3-2017.12.23/03. Games/: 03. Games.cpp
06. Classes and Objects/JA3-2017.12.23/04. Message/: 04. Message.cpp
06. Classes and Objects/JA3-2018.07.7/: 01. Sequence.cpp  02. Copy-Paste.cpp  03. Teams.cpp  04. Message.cpp
06. Classes and Objects/Judge - 2019/: 02. Distance.cpp  03. Sales.cpp
07. Exams/2018.01.09-ExamPrep/: 03. Visitors.cpp  04. Emails.cpp
07. Exams/2018.01.28/: 04. Decryption.cpp
07. Exams/2018.07.15/: 04. Antimatter.cpp
07. Exams/2018.07.15/Author's Solutoins and Tests/Task-1-Secret/Solution/: task-1-secret.cpp
07. Exams/2018.07.15/Author's Solutoins and Tests/Task-2-Format-Lines/Solution/: task-2-format-lines.cpp
07. Exams/2018.07.15/Author's Solutoins and Tests/Task-3-Code/: Task-3-Code.docx
07. Exams/2018.07.15/Author's Solutoins and Tests/Task-3-Code/Solution/: task-3-code-slow.cpp  task-3-code.cpp
07. Exams/2018.07.15/Author's Solutoins and Tests/Task-4-Antimatter/: Exam-1-Task-4-Antimatter.docx
07. Exams/2018.07.15/Author's Solutoins and Tests/Task-4-Antimatter/Solution/: task-4-antimatter.cpp
07. Exams/2018.07.29/: 03. Ranges.cpp  04. Social-Optimized.cpp  04. Social.cpp
07. Exams/2019.01.20/: 01. Different Strings.cpp  04. Costs.cpp
07. Exams/2019.02.03/: 01. Min-Max Temperature.cpp  02. Car Dealership.cpp  03. Sort The Students.cpp  04. The Matrix.cpp  README.adoc
07. Exams/2019.02.03/Author's Solutoins/: 01. Min-Max Temperature.cpp  02. Car Dealership.cpp  03. Sort The Students.cpp  04. The Matrix.cpp
07. Exams/2019.11.17/: 01. Reporter.cpp  02. Square Manipulator.cpp  03. Algebra Helper.cpp  04. Mayan Calculator.cpp  README.md  Test Questions.adoc
07. Exams/2019.11.17/Author's Solutoins and Tests/1.Reporter/Solution/: 1.Reporter.cpp
07. Exams/2019.11.17/Author's Solutoins and Tests/2.SquareManipulator/Solution/: 2.SquareManipulator.cpp
07. Exams/2019.11.17/Author's Solutoins and Tests/3.AlgebraHelper/Solution/: 3.AlgebraHelper.cpp
07. Exams/2019.11.17/Author's Solutoins and Tests/4.MayanCalculator/Solution/: 04.MayanCalculator.cpp
07. Exams/2019.11.24/: 01. Punctuation.cpp  02. Garbage Sorting.cpp  03. Twins.cpp  04. Bomberman.cpp  README.adoc  Test Questions.adoc
07. Exams/2019.11.24/Author's Solutoins and Tests/01. Punctuation/Solution/: 01. Punctuation.cpp
07. Exams/2019.11.24/Author's Solutoins and Tests/02. Garbage Sorting/Solution/: 02. Garbage Sorting.cpp
07. Exams/2019.11.24/Author's Solutoins and Tests/03. Twins/Solution/: 03. Twins.cpp
07. Exams/2019.11.24/Author's Solutoins and Tests/04. Bomberman/Solution/: 04. Bomberman.cpp
07. Exams/2020.05.30/: 01. Shopping List.cpp  02. Sum Of Odds.cpp  03. Coffee Shop.cpp  README.adoc
07. Exams/2020.06.06/: 01. Sorting Players.cpp  02. Space.cpp  03. Pet Exhibition.cpp  README.adoc
07. Exams/2021.03-ExamPrep/: 01. Reverse Words.cpp  02. Numeral System.cpp  03. Ultimate Reverse Words.cpp  README.adoc
07. Exams/2021.05.08/: 01. Below Average Only.cpp  02. Special Items.cpp  03. Machine Commands.cpp  README.adoc
07. Exams/2021.05.15/: 01. Top 5 Elements.cpp  02. Secret Message.cpp  03. Diff Checker.cpp  README.adoc
07. Exams/2023.04.22/: 01. Fun Sequence.cpp  03. Punctuation.cpp  README.adoc
07. Exams/2023.04.29/: README.adoc
07. Exams/2023.12.10/: 01. How Many Vowels.cpp  02. Calculations.cpp  03. Train Composition.cpp  README.adoc
