cmake_minimum_required(VERSION 3.13)
project(CPP_Fundamentals)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")

#######################################
set(L05 "05. STL Associative Containers/")
set(L05_DEMOS "${L05}Demos/")

add_executable(L05_D01.Uses-of-std-pair "${L05_DEMOS}01.Uses-of-std-pair.cpp")
add_executable(L05_D02.std-map "${L05_DEMOS}02.std-map.cpp")
add_executable(L05_D03.map-Indexing-Operator-Pitfall "${L05_DEMOS}03.map-Indexing-Operator-Pitfall.cpp")
add_executable(L05_D04.std-set "${L05_DEMOS}04.std-set.cpp")
add_executable(L05_D05.unordered-map "${L05_DEMOS}05.unordered-map.cpp")
add_executable(L05_D06.unordered-set "${L05_DEMOS}06.unordered-set.cpp")
add_executable(L05_D07.Map-of-Vectors "${L05_DEMOS}07.Map-of-Vectors.cpp")
add_executable(L05_D08.Sorting-Array-Like-Containers "${L05_DEMOS}08.Sorting-Array-Like-Containers.cpp")
add_executable(L05_D09.Sorting-Linked-Lists "${L05_DEMOS}09.Sorting-Linked-Lists.cpp")
add_executable(L05_D10.Searching-Algorithms "${L05_DEMOS}10.Searching-Algorithms.cpp")
add_executable(L05_D11.Searching-Range-Not-Found-Pitfall "${L05_DEMOS}11.Searching-Range-Not-Found-Pitfall.cpp")
add_executable(L05_D12.Some-Other-Algorithms "${L05_DEMOS}12.Some-Other-Algorithms.cpp")
add_executable(L05_D13.live-demo-person-locations "${L05_DEMOS}live-demo-person-locations.cpp")

set(E05_EXERCISE "${L05}Exercise/")
add_executable(L05_E01.EvenOddInMap "${E05_EXERCISE}01. EvenOddInMap.cpp")
add_executable(L05_E02.FilterByNameOrAge "${E05_EXERCISE}02. FilterByNameOrAge.cpp")
add_executable(L05_E03.FindPointIfInsideOrOutside "${E05_EXERCISE}03. FindPointIfInsideOrOutside.cpp")
add_executable(L05_E04.CarProgram "${E05_EXERCISE}04. CarProgram.cpp")

set(E05_HOMEWORK "${L05}Homework/")
add_executable(L05_H01.CountRealNumbers "${E05_HOMEWORK}01. CountRealNumbers.cpp")
add_executable(L05_H02.OddOccurrences "${E05_HOMEWORK}02. OddOccurrences.cpp")
add_executable(L05_H03.Largest3 "${E05_HOMEWORK}03. Largest3.cpp")
add_executable(L05_H04.ShortWords "${E05_HOMEWORK}04. ShortWords.cpp")
add_executable(L05_H05.ShortNumbers "${E05_HOMEWORK}05. ShortNumbers.cpp")
add_executable(L05_H06.Squares "${E05_HOMEWORK}06. Squares.cpp")
add_executable(L05_H07.Miners "${E05_HOMEWORK}07. Miners.cpp")

#######################################
set(L06 "06. Classes and Objects/")
set(L06_DEMOS "${L06}Demos/")

add_executable(L05_D01.typedef "${L06_DEMOS}01.typedef.cpp")
add_executable(L05_D02.Enumerations "${L06_DEMOS}02.Enumerations.cpp")
add_executable(L05_D03.Defining-Classes "${L06_DEMOS}03.Defining-Classes.cpp")
add_executable(L05_D04.Using-Objects "${L06_DEMOS}04.Using-Objects.cpp")
add_executable(L05_D05.Simple-Constructors "${L06_DEMOS}05.Simple-Constructors.cpp")
add_executable(L05_D06.Pitfall-Same-Parameter-Names-As-Fields-aka-Hiding-Fields "${L06_DEMOS}06.Pitfall-Same-Parameter-Names-As-Fields-aka-Hiding-Fields.cpp")
add_executable(L05_D07.Constructor-Initializer-List "${L06_DEMOS}07.Constructor-Initializer-List.cpp")
add_executable(L05_D08.Simple-Methods "${L06_DEMOS}08.Simple-Methods.cpp")
add_executable(L05_D09.Refactored-Methods "${L06_DEMOS}09.Refactored-Methods.cpp")
add_executable(L05_D10.Encapsulation "${L06_DEMOS}10.Encapsulation.cpp")
add_executable(L05_D11.Getters-and-Setters "${L06_DEMOS}11.Getters-and-Setters.cpp")

#######################################
set(EXAMS "07. Exams/")

set(E_2018_01_09_PREP "${EXAMS}2018.01.09-ExamPrep/")
add_executable(E_2018_01_09_PREP_T01.Sequence "${E_2018_01_09_PREP}01. Sequence.cpp")
add_executable(E_2018_01_09_PREP_T02.CopyPaste "${E_2018_01_09_PREP}02. CopyPaste.cpp")
add_executable(E_2018_01_09_PREP_T03.Visitors "${E_2018_01_09_PREP}03. Visitors.cpp")
add_executable(E_2018_01_09_PREP_T04.Emails "${E_2018_01_09_PREP}04. Emails.cpp")

set(E_2018_01_14 "${EXAMS}2018.01.14/")
add_executable(E_2018_01_14_T01.Extremes "${E_2018_01_14}01. Extremes.cpp")
add_executable(E_2018_01_14_T02.Compression "${E_2018_01_14}02. Compression.cpp")
add_executable(E_2018_01_14_T03.Data "${E_2018_01_14}03. Data.cpp")
add_executable(E_2018_01_14_T04.Interference "${E_2018_01_14}04. Interference.cpp")

set(E_2018_01_28 "${EXAMS}2018.01.28/")
add_executable(E_2018_01_28_T01.Unused "${E_2018_01_28}01. Unused.cpp")
add_executable(E_2018_01_28_T02.Decompression "${E_2018_01_28}02. Decompression.cpp")
add_executable(E_2018_01_28_T03.Entities "${E_2018_01_28}03. Entities.cpp")
add_executable(E_2018_01_28_T04.Decryption "${E_2018_01_28}04. Decryption.cpp")

set(E_2018_07_15 "${EXAMS}2018.07.15/")
add_executable(E_2018_07_15_T01.Secret "${E_2018_07_15}01. Secret.cpp")
add_executable(E_2018_07_15_T02.FormatLines "${E_2018_07_15}02. FormatLines.cpp")
add_executable(E_2018_07_15_T03.Code "${E_2018_07_15}03. Code.cpp")
add_executable(E_2018_07_15_T04.Antimatter "${E_2018_07_15}04. Antimatter.cpp")

set(E_2018_07_29 "${EXAMS}2018.07.29/")
add_executable(E_2018_07_29_T01.Diff "${E_2018_07_29}01. Diff.cpp")
add_executable(E_2018_07_29_T02.Glitches "${E_2018_07_29}02. Glitches.cpp")
add_executable(E_2018_07_29_T03.Ranges "${E_2018_07_29}03. Ranges.cpp")
add_executable(E_2018_07_29_T04.Social "${E_2018_07_29}04. Social.cpp")
