cmake_minimum_required(VERSION 3.13)
project(CPP_Fundamentals)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")

#######################################
set(L01 "01. Basic Syntax/")
set(L01_DEMOS "${L01}Demos/")

add_executable(L01_D01.Declaring-Initializing-Variables "${L01_DEMOS}01.Declaring-Initializing-Variables.cpp")
add_executable(L01_D02.Uninitialized-Locals "${L01_DEMOS}02.Uninitialized-Locals.cpp")
add_executable(L01_D03.Globals-and-Locals "${L01_DEMOS}03.Globals-and-Locals.cpp")
add_executable(L01_D04.Constants "${L01_DEMOS}04.Constants.cpp")
add_executable(L01_D05.Integer-Types "${L01_DEMOS}05.Integer-Types.cpp")
add_executable(L01_D06.Floating-Point-Types "${L01_DEMOS}06.Floating-Point-Types.cpp")
add_executable(L01_D07.Character-Types "${L01_DEMOS}07.Character-Types.cpp")
add_executable(L01_D08.Boolean-Type "${L01_DEMOS}08.Boolean-Type.cpp")
add_executable(L01_D09.Literals "${L01_DEMOS}09.Literals.cpp")
add_executable(L01_D10.Operators-and-Expressions "${L01_DEMOS}10.Operators-and-Expressions.cpp")
add_executable(L01_D11.Conditionals "${L01_DEMOS}11.Conditionals.cpp")
add_executable(L01_D12.Conditional-Pitfall "${L01_DEMOS}12.Conditional-Pitfall.cpp")
add_executable(L01_D13.Switch-Case "${L01_DEMOS}13.Switch-Case.cpp")
add_executable(L01_D14.For-Loop "${L01_DEMOS}14.For-Loop.cpp")
add_executable(L01_D15.While-Loops "${L01_DEMOS}15.While-Loops.cpp")
add_executable(L01_D16.cin-and-cout "${L01_DEMOS}16.cin-and-cout.cpp")
add_executable(L01_D17.Reading-Multiple-Numbers "${L01_DEMOS}17.Reading-Multiple-Numbers.cpp")

#######################################
set(L02 "02. Functions, Arrays and Vectors/")
set(L02_DEMOS "${L02}Demos/")

add_executable(L02_D01.Calling-Functions "${L02_DEMOS}01.Calling-Functions.cpp")
add_executable(L02_D02.Declare-and-Define-Function "${L02_DEMOS}02.Declare-and-Define-Function.cpp")
add_executable(L02_D03.Declaring-vs-Defining-Functions "${L02_DEMOS}03.Declaring-vs-Defining-Functions.cpp")
add_executable(L02_D04.Parameters-and-Returning-Values "${L02_DEMOS}04.Parameters-and-Returning-Values.cpp")
add_executable(L02_D05.Overloaded-Functions "${L02_DEMOS}05.Overloaded-Functions.cpp")
add_executable(L02_D06.Static-Variables-Inside-Functions "${L02_DEMOS}06.Static-Variables-Inside-Functions.cpp")
add_executable(L02_D07.Creating-Cpp-Arrays "${L02_DEMOS}07.Creating-Cpp-Arrays.cpp")
add_executable(L02_D08.Accessing-Array-Elements "${L02_DEMOS}08.Accessing-Array-Elements.cpp")
add_executable(L02_D09.Reading-in-Array-Elements "${L02_DEMOS}09.Reading-in-Array-Elements.cpp")
add_executable(L02_D10.Writing-out-Array-Elements "${L02_DEMOS}10.Writing-out-Array-Elements.cpp")
add_executable(L02_D11.Arrays-with-Functions "${L02_DEMOS}11.Arrays-with-Functions.cpp")
add_executable(L02_D12.Cpp-11-Range-Loop-and-Array-Class "${L02_DEMOS}12.Cpp-11-Range-Loop-and-Array-Class.cpp")
add_executable(L02_D13.Initializing-STL-Vectors "${L02_DEMOS}13.Initializing-STL-Vectors.cpp")
add_executable(L02_D14.STL-Vectors-as-Function-Parameters "${L02_DEMOS}14.STL-Vectors-as-Function-Parameters.cpp")
add_executable(L02_D15.Returning-STL-Vectors-from-Functions "${L02_DEMOS}15.Returning-STL-Vectors-from-Functions.cpp")

set(JA01 "${L02}JA1/")
add_executable(JA01_01.Pipes "${JA01}01. Pipes.cpp")
add_executable(JA01_03.Bus "${JA01}03. Bus.cpp")

#######################################
set(L03 "03. Strings and Streams/")
set(L03_DEMOS "${L03}Demos/")

add_executable(L03_D01.C-Strings-Basics "${L03_DEMOS}01.C-Strings-Basics.cpp")
add_executable(L03_D02.Non-Terminated-C-Strings "${L03_DEMOS}02.Non-Terminated-C-Strings.cpp")
add_executable(L03_D03.std-string-Basics "${L03_DEMOS}03.std-string-Basics.cpp")
add_executable(L03_D04.std-string-Comparison-and-Search "${L03_DEMOS}04.std-string-Comparison-and-Search.cpp")
add_executable(L03_D05.std-string-Find-Multiple-Occurrences "${L03_DEMOS}05.std-string-Find-Multiple-Occurrences.cpp")
add_executable(L03_D06.std-string-Substring-Erase-Replace "${L03_DEMOS}06.std-string-Substring-Erase-Replace.cpp")
add_executable(L03_D07.Using-std-stringstream "${L03_DEMOS}07.Using-std-stringstream.cpp")
add_executable(L03_D08.Reading-with-getline-and-Streams "${L03_DEMOS}08.Reading-with-getline-and-Streams.cpp")
add_executable(L03_D09.Parsing-Numbers-from-a-Line "${L03_DEMOS}09.Parsing-Numbers-from-a-Line.cpp")
add_executable(L03_D10.Reading-From-and-Writing-to-Files "${L03_DEMOS}10.Reading-From-and-Writing-to-Files.cpp")

#######################################
set(L04 "04. Linear Containers/")

set(L04_DEMOS "${L04}Demos/")
add_executable(L04_D01.Multidimensional-Arrays "${L04_DEMOS}01.Multidimensional-Arrays.cpp")
add_executable(L04_D02.Row-Major-Order-in-MD-Arrays "${L04_DEMOS}02.Row-Major-Order-in-Multidimensional-Arrays.cpp")
add_executable(L04_D03.Multidimensional-Containers "${L04_DEMOS}03.Multidimensional-Containers.cpp")
add_executable(L04_D04.vector "${L04_DEMOS}04.vector.cpp")
add_executable(L04_D05.Using-Iterators-with-vector "${L04_DEMOS}05.Using-Iterators-with-vector.cpp")
add_executable(L04_D06.list "${L04_DEMOS}06.list.cpp")
add_executable(L04_D07.Container-Adaptors "${L04_DEMOS}07.Container-Adaptors.cpp")

set(L04_JA2 "${L04}JA2/")
add_executable(L04_JA2_T01.AverageHexColors "${L04_JA2}01. AverageHexColors.cpp")
add_executable(L04_JA2_T02.WordMatching "${L04_JA2}02. WordMatching.cpp")
add_executable(L04_JA2_T03.Machine "${L04_JA2}03. Machine.cpp")
add_executable(L04_JA2_T04.TheMatrix "${L04_JA2}04. TheMatrix.cpp")

set(L04_J "${L04}Judge/")
add_executable(L04_J_T01.FinedEvensInDualArray "${L04_J}01. FinedEvensInDualArray.cpp")
add_executable(L04_J_T02.FindIndexInDualArray "${L04_J}02. FindIndexInDualArray.cpp")
add_executable(L04_J_T03.FindEvenNumbersInVector "${L04_J}03. FindEvenNumbersInVector.cpp")
add_executable(L04_J_T04.SortNumbersInGreaterOrder "${L04_J}04. SortNumbersInGreaterOrder.cpp")
add_executable(L04_J_T05.FindSumOfAllNumbersInVector "${L04_J}05. FindSumOfAllNumbersInVector.cpp")

#######################################
set(L05 "05. STL Associative Containers/")
set(L05_DEMOS "${L05}Demos/")

add_executable(L05_D01.Uses-of-std-pair "${L05_DEMOS}01.Uses-of-std-pair.cpp")
add_executable(L05_D02.std-map "${L05_DEMOS}02.std-map.cpp")
add_executable(L05_D03.map-Indexing-Operator-Pitfall "${L05_DEMOS}03.map-Indexing-Operator-Pitfall.cpp")
add_executable(L05_D04.std-set "${L05_DEMOS}04.std-set.cpp")
add_executable(L05_D05.unordered-map "${L05_DEMOS}05.unordered-map.cpp")
add_executable(L05_D06.unordered-set "${L05_DEMOS}06.unordered-set.cpp")
add_executable(L05_D07.Map-of-Vectors "${L05_DEMOS}07.Map-of-Vectors.cpp")
add_executable(L05_D08.Sorting-Array-Like-Containers "${L05_DEMOS}08.Sorting-Array-Like-Containers.cpp")
add_executable(L05_D09.Sorting-Linked-Lists "${L05_DEMOS}09.Sorting-Linked-Lists.cpp")
add_executable(L05_D10.Searching-Algorithms "${L05_DEMOS}10.Searching-Algorithms.cpp")
add_executable(L05_D11.Searching-Range-Not-Found-Pitfall "${L05_DEMOS}11.Searching-Range-Not-Found-Pitfall.cpp")
add_executable(L05_D12.Some-Other-Algorithms "${L05_DEMOS}12.Some-Other-Algorithms.cpp")
add_executable(L05_D13.live-demo-person-locations "${L05_DEMOS}live-demo-person-locations.cpp")

set(E05_EXERCISE "${L05}Exercise/")
add_executable(L05_E01.EvenOddInMap "${E05_EXERCISE}01. EvenOddInMap.cpp")
add_executable(L05_E02.FilterByNameOrAge "${E05_EXERCISE}02. FilterByNameOrAge.cpp")
add_executable(L05_E03.FindPointIfInsideOrOutside "${E05_EXERCISE}03. FindPointIfInsideOrOutside.cpp")
add_executable(L05_E04.CarProgram "${E05_EXERCISE}04. CarProgram.cpp")

set(E05_HOMEWORK "${L05}Homework/")
add_executable(L05_H01.CountRealNumbers "${E05_HOMEWORK}01. CountRealNumbers.cpp")
add_executable(L05_H02.OddOccurrences "${E05_HOMEWORK}02. OddOccurrences.cpp")
add_executable(L05_H03.Largest3 "${E05_HOMEWORK}03. Largest3.cpp")
add_executable(L05_H04.ShortWords "${E05_HOMEWORK}04. ShortWords.cpp")
add_executable(L05_H05.ShortNumbers "${E05_HOMEWORK}05. ShortNumbers.cpp")
add_executable(L05_H06.Squares "${E05_HOMEWORK}06. Squares.cpp")
add_executable(L05_H07.Miners "${E05_HOMEWORK}07. Miners.cpp")

#######################################
set(L06 "06. Classes and Objects/")

set(L06_DEMOS "${L06}Demos/")
add_executable(L05_D01.typedef "${L06_DEMOS}01.typedef.cpp")
add_executable(L05_D02.Enumerations "${L06_DEMOS}02.Enumerations.cpp")
add_executable(L05_D03.Defining-Classes "${L06_DEMOS}03.Defining-Classes.cpp")
add_executable(L05_D04.Using-Objects "${L06_DEMOS}04.Using-Objects.cpp")
add_executable(L05_D05.Simple-Constructors "${L06_DEMOS}05.Simple-Constructors.cpp")
add_executable(L05_D06.Pitfall-Hiding-Fields "${L06_DEMOS}06.Pitfall-Same-Parameter-Names-As-Fields-aka-Hiding-Fields.cpp")
add_executable(L05_D07.Constructor-Initializer-List "${L06_DEMOS}07.Constructor-Initializer-List.cpp")
add_executable(L05_D08.Simple-Methods "${L06_DEMOS}08.Simple-Methods.cpp")
add_executable(L05_D09.Refactored-Methods "${L06_DEMOS}09.Refactored-Methods.cpp")
add_executable(L05_D10.Encapsulation "${L06_DEMOS}10.Encapsulation.cpp")
add_executable(L05_D11.Getters-and-Setters "${L06_DEMOS}11.Getters-and-Setters.cpp")

set(L06_HOMEWORK "${L06}Homework/")
add_executable(L05_H01.Distance "${L06_HOMEWORK}01. Distance.cpp")
add_executable(L05_H02.AreaAndPerimeterOfRectangle "${L06_HOMEWORK}02. AreaAndPerimeterOfRectangle .cpp")
add_executable(L05_H03.TimeCalculation "${L06_HOMEWORK}03. TimeCalculation.cpp")
add_executable(L05_H04.StudentsInformation "${L06_HOMEWORK}04. StudentsInformation .cpp")
add_executable(L05_H05.TotalAverageOfStudents "${L06_HOMEWORK}05. TotalAverageOfStudents.cpp")

#######################################
set(EXAMS "07. Exams/")

set(E_2018_01_09_PREP "${EXAMS}2018.01.09-ExamPrep/")
add_executable(E_2018_01_09_PREP_T01.Sequence "${E_2018_01_09_PREP}01. Sequence.cpp")
add_executable(E_2018_01_09_PREP_T02.CopyPaste "${E_2018_01_09_PREP}02. CopyPaste.cpp")
add_executable(E_2018_01_09_PREP_T03.Visitors "${E_2018_01_09_PREP}03. Visitors.cpp")
add_executable(E_2018_01_09_PREP_T04.Emails "${E_2018_01_09_PREP}04. Emails.cpp")

set(E_2018_01_14 "${EXAMS}2018.01.14/")
add_executable(E_2018_01_14_T01.Extremes "${E_2018_01_14}01. Extremes.cpp")
add_executable(E_2018_01_14_T02.Compression "${E_2018_01_14}02. Compression.cpp")
add_executable(E_2018_01_14_T03.Data "${E_2018_01_14}03. Data.cpp")
add_executable(E_2018_01_14_T04.Interference "${E_2018_01_14}04. Interference.cpp")

set(E_2018_01_28 "${EXAMS}2018.01.28/")
add_executable(E_2018_01_28_T01.Unused "${E_2018_01_28}01. Unused.cpp")
add_executable(E_2018_01_28_T02.Decompression "${E_2018_01_28}02. Decompression.cpp")
add_executable(E_2018_01_28_T03.Entities "${E_2018_01_28}03. Entities.cpp")
add_executable(E_2018_01_28_T04.Decryption "${E_2018_01_28}04. Decryption.cpp")

set(E_2018_07_15 "${EXAMS}2018.07.15/")
add_executable(E_2018_07_15_T01.Secret "${E_2018_07_15}01. Secret.cpp")
add_executable(E_2018_07_15_T02.FormatLines "${E_2018_07_15}02. FormatLines.cpp")
add_executable(E_2018_07_15_T03.Code "${E_2018_07_15}03. Code.cpp")
add_executable(E_2018_07_15_T04.Antimatter "${E_2018_07_15}04. Antimatter.cpp")

set(E_2018_07_29 "${EXAMS}2018.07.29/")
add_executable(E_2018_07_29_T01.Diff "${E_2018_07_29}01. Diff.cpp")
add_executable(E_2018_07_29_T02.Glitches "${E_2018_07_29}02. Glitches.cpp")
add_executable(E_2018_07_29_T03.Ranges "${E_2018_07_29}03. Ranges.cpp")
add_executable(E_2018_07_29_T04.Social "${E_2018_07_29}04. Social.cpp")
add_executable(E_2018_07_29_T04.Social-Optimized "${E_2018_07_29}04. Social-Optimized.cpp")

set(E_2019_01_20 "${EXAMS}2019.01.20/")
add_executable(E_2019_01_20T01.DifferentStrings "${E_2019_01_20}01. Different Strings.cpp")
add_executable(E_2019_01_20T02.Planet "${E_2019_01_20}02. Planet.cpp")
add_executable(E_2019_01_20T03.ProductsAndCities "${E_2019_01_20}03. Products and Cities.cpp")
add_executable(E_2019_01_20T04.Costs "${E_2019_01_20}04. Costs.cpp")
