cmake_minimum_required(VERSION 3.13)
project(CPP_Fundamentals)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")

#######################################
set(L01 "01. Basic Syntax/")
set(L01_DEMOS "${L01}Demos/")

add_executable(L01_D01.Declaring-Initializing-Variables "${L01_DEMOS}01.Declaring-Initializing-Variables.cpp")
add_executable(L01_D02.Uninitialized-Locals "${L01_DEMOS}02.Uninitialized-Locals.cpp")
add_executable(L01_D03.Globals-and-Locals "${L01_DEMOS}03.Globals-and-Locals.cpp")
add_executable(L01_D04.Constants "${L01_DEMOS}04.Constants.cpp")
add_executable(L01_D05.Integer-Types "${L01_DEMOS}05.Integer-Types.cpp")
add_executable(L01_D06.Floating-Point-Types "${L01_DEMOS}06.Floating-Point-Types.cpp")
add_executable(L01_D07.Character-Types "${L01_DEMOS}07.Character-Types.cpp")
add_executable(L01_D08.Boolean-Type "${L01_DEMOS}08.Boolean-Type.cpp")
add_executable(L01_D09.Literals "${L01_DEMOS}09.Literals.cpp")
add_executable(L01_D10.Operators-and-Expressions "${L01_DEMOS}10.Operators-and-Expressions.cpp")
add_executable(L01_D11.Conditionals "${L01_DEMOS}11.Conditionals.cpp")
add_executable(L01_D12.Conditional-Pitfall "${L01_DEMOS}12.Conditional-Pitfall.cpp")
add_executable(L01_D13.Switch-Case "${L01_DEMOS}13.Switch-Case.cpp")
add_executable(L01_D14.For-Loop "${L01_DEMOS}14.For-Loop.cpp")
add_executable(L01_D15.While-Loops "${L01_DEMOS}15.While-Loops.cpp")
add_executable(L01_D16.cin-and-cout "${L01_DEMOS}16.cin-and-cout.cpp")
add_executable(L01_D17.Reading-Multiple-Numbers "${L01_DEMOS}17.Reading-Multiple-Numbers.cpp")

set(L01_HW "${L01}Homework/")
add_executable(L01_HW07.FactorialTrailingZeroes "${L01_HW}07. Factorial Trailing Zeroes.cpp")

set(L01_J "${L01}Judge/")
add_executable(L01_J01.OrderTwoNumbers "${L01_J}01. Order Two Numbers.cpp")
add_executable(L01_J02.ProductSign "${L01_J}02. Product Sign.cpp")
add_executable(L01_J03.QuadraticEquation "${L01_J}03. Quadratic Equation.cpp")
add_executable(L01_J04.1toN "${L01_J}04. 1 to N.cpp")
add_executable(L01_J05.MinAndMax "${L01_J}05. Min and Max.cpp")
add_executable(L01_J06.GreatestCommonDivisor "${L01_J}06. Greatest Common Divisor.cpp")

#######################################
set(L02 "02. Functions, Arrays and Vectors/")
set(L02_DEMOS "${L02}Demos/")

add_executable(L02_D01.Calling-Functions "${L02_DEMOS}01.Calling-Functions.cpp")
add_executable(L02_D02.Declare-and-Define-Function "${L02_DEMOS}02.Declare-and-Define-Function.cpp")
add_executable(L02_D03.Declaring-vs-Defining-Functions "${L02_DEMOS}03.Declaring-vs-Defining-Functions.cpp")
add_executable(L02_D04.Parameters-and-Returning-Values "${L02_DEMOS}04.Parameters-and-Returning-Values.cpp")
add_executable(L02_D05.Overloaded-Functions "${L02_DEMOS}05.Overloaded-Functions.cpp")
add_executable(L02_D06.Static-Variables-Inside-Functions "${L02_DEMOS}06.Static-Variables-Inside-Functions.cpp")
add_executable(L02_D07.Creating-Cpp-Arrays "${L02_DEMOS}07.Creating-Cpp-Arrays.cpp")
add_executable(L02_D08.Accessing-Array-Elements "${L02_DEMOS}08.Accessing-Array-Elements.cpp")
add_executable(L02_D09.Reading-in-Array-Elements "${L02_DEMOS}09.Reading-in-Array-Elements.cpp")
add_executable(L02_D10.Writing-out-Array-Elements "${L02_DEMOS}10.Writing-out-Array-Elements.cpp")
add_executable(L02_D11.Arrays-with-Functions "${L02_DEMOS}11.Arrays-with-Functions.cpp")
add_executable(L02_D12.Cpp-11-Range-Loop-and-Array-Class "${L02_DEMOS}12.Cpp-11-Range-Loop-and-Array-Class.cpp")
add_executable(L02_D13.Initializing-STL-Vectors "${L02_DEMOS}13.Initializing-STL-Vectors.cpp")
add_executable(L02_D14.STL-Vectors-as-Function-Parameters "${L02_DEMOS}14.STL-Vectors-as-Function-Parameters.cpp")
add_executable(L02_D15.Returning-STL-Vectors-from-Functions "${L02_DEMOS}15.Returning-STL-Vectors-from-Functions.cpp")

set(JA01 "${L02}JA1/")
add_executable(JA01_01.Pipes "${JA01}01. Pipes.cpp")
add_executable(JA01_02.Modulated-Sum "${JA01}02. Modulated Sum.cpp")
add_executable(JA01_03.Bus "${JA01}03. Bus.cpp")

set(L02_JUDGE "${L02}Judge/")
add_executable(L02_J01.CompareArrays "${L02_JUDGE}01. Compare Arrays.cpp")
add_executable(L02_J02.LongestSequence "${L02_JUDGE}02. Longest Sequence.cpp")
add_executable(L02_J03.AboveAverage "${L02_JUDGE}03. Above Average.cpp")
add_executable(L02_J04.MostFrequentNumber "${L02_JUDGE}04. Most Frequent Number.cpp")
add_executable(L02_J05.CartesianProduct "${L02_JUDGE}05. Cartesian Product.cpp")
add_executable(L02_J06.ClosestNumber "${L02_JUDGE}06. Closest Numbers.cpp")

#######################################
set(L03 "03. Strings and Streams/")
set(L03_DEMOS "${L03}Demos/")

add_executable(L03_D01.C-Strings-Basics "${L03_DEMOS}01.C-Strings-Basics.cpp")
add_executable(L03_D02.Non-Terminated-C-Strings "${L03_DEMOS}02.Non-Terminated-C-Strings.cpp")
add_executable(L03_D03.std-string-Basics "${L03_DEMOS}03.std-string-Basics.cpp")
add_executable(L03_D04.std-string-Comparison-and-Search "${L03_DEMOS}04.std-string-Comparison-and-Search.cpp")
add_executable(L03_D05.std-string-Find-Multiple-Occurrences "${L03_DEMOS}05.std-string-Find-Multiple-Occurrences.cpp")
add_executable(L03_D06.std-string-Substring-Erase-Replace "${L03_DEMOS}06.std-string-Substring-Erase-Replace.cpp")
add_executable(L03_D07.Using-std-stringstream "${L03_DEMOS}07.Using-std-stringstream.cpp")
add_executable(L03_D08.Reading-with-getline-and-Streams "${L03_DEMOS}08.Reading-with-getline-and-Streams.cpp")
add_executable(L03_D09.Parsing-Numbers-from-a-Line "${L03_DEMOS}09.Parsing-Numbers-from-a-Line.cpp")
add_executable(L03_D10.Reading-From-and-Writing-to-Files "${L03_DEMOS}10.Reading-From-and-Writing-to-Files.cpp")

set(L03_JUDGE "${L03}Judge/")
add_executable(L03_J01.CompareArraysAgain "${L03_JUDGE}01. Compare Arrays Again.cpp")
add_executable(L03_J02.MathematicalExpression "${L03_JUDGE}02. Mathematical Expression.cpp")
add_executable(L03_J03.TitleCase "${L03_JUDGE}03. Title Case.cpp")
add_executable(L03_J04.ReplaceAll "${L03_JUDGE}04. Replace All.cpp")
add_executable(L03_J05.InvalidInput "${L03_JUDGE}05. Invalid Input.cpp")
add_executable(L03_J06.TheSignalAndTheNoise "${L03_JUDGE}06. The Signal and the Noise.cpp")
add_executable(L03_J07.TheNoiseAndTheSignal "${L03_JUDGE}07. The Noise and the Signal.cpp")

#######################################
set(L04 "04. Linear Containers/")

set(L04_DEMOS "${L04}Demos/")
add_executable(L04_D01.Multidimensional-Arrays "${L04_DEMOS}01.Multidimensional-Arrays.cpp")
add_executable(L04_D02.Row-Major-Order-in-MD-Arrays "${L04_DEMOS}02.Row-Major-Order-in-Multidimensional-Arrays.cpp")
add_executable(L04_D03.Multidimensional-Containers "${L04_DEMOS}03.Multidimensional-Containers.cpp")
add_executable(L04_D04.vector "${L04_DEMOS}04.vector.cpp")
add_executable(L04_D05.Using-Iterators-with-vector "${L04_DEMOS}05.Using-Iterators-with-vector.cpp")
add_executable(L04_D06.list "${L04_DEMOS}06.list.cpp")
add_executable(L04_D07.Container-Adaptors "${L04_DEMOS}07.Container-Adaptors.cpp")

set(L04_JA2 "${L04}JA2/")
add_executable(L04_JA2_01.AverageHexColors "${L04_JA2}01. AverageHexColors.cpp")
add_executable(L04_JA2_02.WordMatching "${L04_JA2}02. WordMatching.cpp")
add_executable(L04_JA2_03.Machine "${L04_JA2}03. Machine.cpp")
add_executable(L04_JA2_04.TheMatrix "${L04_JA2}04. TheMatrix.cpp")
add_executable(L04_JA2_04.TheMatrixWithTemplates "${L04_JA2}04. TheMatrixWithTemplates.cpp")

set(L04_J "${L04}Judge/")
add_executable(L04_J01.FinedEvensInDualArray "${L04_J}01. FinedEvensInDualArray.cpp")
add_executable(L04_J02.FindIndexInDualArray "${L04_J}02. FindIndexInDualArray.cpp")
add_executable(L04_J03.FindEvenNumbersInVector "${L04_J}03. FindEvenNumbersInVector.cpp")
add_executable(L04_J04.SortNumbersInGreaterOrder "${L04_J}04. SortNumbersInGreaterOrder.cpp")
add_executable(L04_J05.FindSumOfAllNumbersInVector "${L04_J}05. FindSumOfAllNumbersInVector.cpp")

set(L04_J_2020 "${L04}Judge 2020/")
add_executable(L04_J2020_01.CompareMatrices "${L04_J_2020}01. CompareMatrices.cpp")
add_executable(L04_J2020_02.PositionsOf "${L04_J_2020}02. PositionsOf.cpp")
add_executable(L04_J2020_03.MergeTrains "${L04_J_2020}03. MergeTrains.cpp")
add_executable(L04_J2020_04.Brackets "${L04_J_2020}04. Brackets.cpp")

#######################################
set(L05 "05. STL Associative Containers/")
set(L05_DEMOS "${L05}Demos/")

add_executable(L05_D01.Uses-of-std-pair "${L05_DEMOS}01.Uses-of-std-pair.cpp")
add_executable(L05_D02.std-map "${L05_DEMOS}02.std-map.cpp")
add_executable(L05_D03.map-Indexing-Operator-Pitfall "${L05_DEMOS}03.map-Indexing-Operator-Pitfall.cpp")
add_executable(L05_D04.std-set "${L05_DEMOS}04.std-set.cpp")
add_executable(L05_D05.unordered-map "${L05_DEMOS}05.unordered-map.cpp")
add_executable(L05_D06.unordered-set "${L05_DEMOS}06.unordered-set.cpp")
add_executable(L05_D07.Map-of-Vectors "${L05_DEMOS}07.Map-of-Vectors.cpp")
add_executable(L05_D08.Sorting-Array-Like-Containers "${L05_DEMOS}08.Sorting-Array-Like-Containers.cpp")
add_executable(L05_D09.Sorting-Linked-Lists "${L05_DEMOS}09.Sorting-Linked-Lists.cpp")
add_executable(L05_D10.Searching-Algorithms "${L05_DEMOS}10.Searching-Algorithms.cpp")
add_executable(L05_D11.Searching-Range-Not-Found-Pitfall "${L05_DEMOS}11.Searching-Range-Not-Found-Pitfall.cpp")
add_executable(L05_D12.Some-Other-Algorithms "${L05_DEMOS}12.Some-Other-Algorithms.cpp")
add_executable(L05_D13.live-demo-person-locations "${L05_DEMOS}live-demo-person-locations.cpp")

set(E05_EXERCISE "${L05}Exercise/")
add_executable(L05_E01.EvenOddInMap "${E05_EXERCISE}01. EvenOddInMap.cpp")
add_executable(L05_E02.FilterByNameOrAge "${E05_EXERCISE}02. FilterByNameOrAge.cpp")
add_executable(L05_E03.FindPointIfInsideOrOutside "${E05_EXERCISE}03. FindPointIfInsideOrOutside.cpp")
add_executable(L05_E04.CarProgram "${E05_EXERCISE}04. CarProgram.cpp")

set(E05_JUDGE "${L05}Judge/")
add_executable(L05_J01.CountRealNumbers "${E05_JUDGE}01. CountRealNumbers.cpp")
add_executable(L05_J02.OddOccurrences "${E05_JUDGE}02. OddOccurrences.cpp")
add_executable(L05_J03.Largest3 "${E05_JUDGE}03. Largest3.cpp")
add_executable(L05_J04.ShortWords "${E05_JUDGE}04. ShortWords.cpp")
add_executable(L05_J05.SortNumbers "${E05_JUDGE}05. SortNumbers.cpp")
add_executable(L05_J06.Squares "${E05_JUDGE}06. Squares.cpp")
add_executable(L05_J07.Miners "${E05_JUDGE}07. Miners.cpp")

#######################################
set(L06 "06. Classes and Objects/")

set(L06_DEMOS "${L06}Demos/")
add_executable(L06_D01.typedef "${L06_DEMOS}01.typedef.cpp")
add_executable(L06_D02.Enumerations "${L06_DEMOS}02.Enumerations.cpp")
add_executable(L06_D03.Defining-Classes "${L06_DEMOS}03.Defining-Classes.cpp")
add_executable(L06_D04.Using-Objects "${L06_DEMOS}04.Using-Objects.cpp")
add_executable(L06_D05.Simple-Constructors "${L06_DEMOS}05.Simple-Constructors.cpp")
add_executable(L06_D06.Pitfall-Hiding-Fields "${L06_DEMOS}06.Pitfall-Same-Parameter-Names-As-Fields-aka-Hiding-Fields.cpp")
add_executable(L06_D07.Constructor-Initializer-List "${L06_DEMOS}07.Constructor-Initializer-List.cpp")
add_executable(L06_D08.Simple-Methods "${L06_DEMOS}08.Simple-Methods.cpp")
add_executable(L06_D09.Refactored-Methods "${L06_DEMOS}09.Refactored-Methods.cpp")
add_executable(L06_D10.Encapsulation "${L06_DEMOS}10.Encapsulation.cpp")
add_executable(L06_D11.Getters-and-Setters "${L06_DEMOS}11.Getters-and-Setters.cpp")

set(L06_HOMEWORK "${L06}Homework/")
add_executable(L06_HW01.Distance "${L06_HOMEWORK}01. Distance.cpp")
add_executable(L06_HW02.AreaAndPerimeterOfRectangle "${L06_HOMEWORK}02. AreaAndPerimeterOfRectangle .cpp")
add_executable(L06_HW03.TimeCalculation "${L06_HOMEWORK}03. TimeCalculation.cpp")
add_executable(L06_HW04.StudentsInformation "${L06_HOMEWORK}04. StudentsInformation .cpp")
add_executable(L06_HW05.TotalAverageOfStudents "${L06_HOMEWORK}05. TotalAverageOfStudents.cpp")

set(L06_JUDGE_2019 "${L06}Judge - 2019/")
add_executable(L06_J2019_01.SentenceShifter "${L06_JUDGE_2019}01. SentenceShifter.cpp")
add_executable(L06_J2019_01.SentenceShifter2 "${L06_JUDGE_2019}01. SentenceShifter2.cpp")
add_executable(L06_J2019_02.Distance "${L06_JUDGE_2019}02. Distance.cpp")
add_executable(L06_J2019_03.Sales "${L06_JUDGE_2019}03. Sales.cpp")

set(L06_JA3_2017 "${L06}JA3-2017.12.23/")

set(L06_JA3_2017_TASK_01 "${L06_JA3_2017}01. Big Division/")
file(GLOB L06_JA3_2017_TASK_01_H ${L06_JA3_2017_TASK_01}/*.h)
file(GLOB L06_JA3_2017_TASK_01_CPP ${L06_JA3_2017_TASK_01}/*.cpp)
add_executable(L06_JA3_2017_01.BigDivision ${L06_JA3_2017_TASK_01_H} ${L06_JA3_2017_TASK_01_CPP})

set(L06_JA3_2017_TASK_02 "${L06_JA3_2017}02. Near Cities/")
file(GLOB L06_JA3_2017_TASK_02_H ${L06_JA3_2017_TASK_02}/*.h)
file(GLOB L06_JA3_2017_TASK_02_CPP ${L06_JA3_2017_TASK_02}/*.cpp)
add_executable(L06_JA3_2017_02.NearCities ${L06_JA3_2017_TASK_02_H} ${L06_JA3_2017_TASK_02_CPP})

add_executable(L06_JA3_2017_03.Games "${L06_JA3_2017}03. Games/03. Games.cpp")
add_executable(L06_JA3_2017_04.Message "${L06_JA3_2017}04. Message/04. Message.cpp")


set(L06_JA3_2018 "${L06}JA3-2018.07.7/")
add_executable(L06_JA3_2018_01.Sequence "${L06_JA3_2018}01. Sequence.cpp")
add_executable(L06_JA3_2018_02.CopyPaste "${L06_JA3_2018}02. Copy-Paste.cpp")
add_executable(L06_JA3_2018_03.Teams "${L06_JA3_2018}03. Teams.cpp")
add_executable(L06_JA3_2018_04.Message "${L06_JA3_2018}04. Message.cpp")
#######################################
set(EXAMS "07. Exams/")

set(E_2018_01_09_PREP "${EXAMS}2018.01.09-ExamPrep/")
add_executable(E_2018_01_09_PREP_T01.Sequence "${E_2018_01_09_PREP}01. Sequence.cpp")
add_executable(E_2018_01_09_PREP_T02.CopyPaste "${E_2018_01_09_PREP}02. CopyPaste.cpp")
add_executable(E_2018_01_09_PREP_T03.Visitors "${E_2018_01_09_PREP}03. Visitors.cpp")
add_executable(E_2018_01_09_PREP_T04.Emails "${E_2018_01_09_PREP}04. Emails.cpp")

set(E_2018_01_14 "${EXAMS}2018.01.14/")
add_executable(E_2018_01_14_T01.Extremes "${E_2018_01_14}01. Extremes.cpp")
add_executable(E_2018_01_14_T02.Compression "${E_2018_01_14}02. Compression.cpp")
add_executable(E_2018_01_14_T03.Data "${E_2018_01_14}03. Data.cpp")
add_executable(E_2018_01_14_T04.Interference "${E_2018_01_14}04. Interference.cpp")

set(E_2018_01_28 "${EXAMS}2018.01.28/")
add_executable(E_2018_01_28_T01.Unused "${E_2018_01_28}01. Unused.cpp")
add_executable(E_2018_01_28_T02.Decompression "${E_2018_01_28}02. Decompression.cpp")
add_executable(E_2018_01_28_T03.Entities "${E_2018_01_28}03. Entities.cpp")
add_executable(E_2018_01_28_T04.Decryption "${E_2018_01_28}04. Decryption.cpp")

set(E_2018_07_15 "${EXAMS}2018.07.15/")
add_executable(E_2018_07_15_T01.Secret "${E_2018_07_15}01. Secret.cpp")
add_executable(E_2018_07_15_T02.FormatLines "${E_2018_07_15}02. FormatLines.cpp")
add_executable(E_2018_07_15_T03.Code "${E_2018_07_15}03. Code.cpp")
add_executable(E_2018_07_15_T04.Antimatter "${E_2018_07_15}04. Antimatter.cpp")

set(E_2018_07_29 "${EXAMS}2018.07.29/")
add_executable(E_2018_07_29_T01.Diff "${E_2018_07_29}01. Diff.cpp")
add_executable(E_2018_07_29_T02.Glitches "${E_2018_07_29}02. Glitches.cpp")
add_executable(E_2018_07_29_T03.Ranges "${E_2018_07_29}03. Ranges.cpp")
add_executable(E_2018_07_29_T04.Social "${E_2018_07_29}04. Social.cpp")
add_executable(E_2018_07_29_T04.Social-Optimized "${E_2018_07_29}04. Social-Optimized.cpp")

set(E_2019_01_20 "${EXAMS}2019.01.20/")
add_executable(E_2019_01_20T01.DifferentStrings "${E_2019_01_20}01. Different Strings.cpp")
add_executable(E_2019_01_20T02.Planet "${E_2019_01_20}02. Planet.cpp")
add_executable(E_2019_01_20T03.ProductsAndCities "${E_2019_01_20}03. Products and Cities.cpp")
add_executable(E_2019_01_20T04.Costs "${E_2019_01_20}04. Costs.cpp")

set(E_2019_02_03 "${EXAMS}2019.02.03/")
add_executable(E_2019_02_03T01.MinMaxTemperature "${E_2019_02_03}01. Min-Max Temperature.cpp")
add_executable(E_2019_02_03T02.CarDealership "${E_2019_02_03}02. Car Dealership.cpp")
add_executable(E_2019_02_03T03.SortTheStudents "${E_2019_02_03}03. Sort The Students.cpp")
add_executable(E_2019_02_03T04.TheMatrix "${E_2019_02_03}04. The Matrix.cpp")

set(E_2019_11_17 "${EXAMS}2019.11.17/")
add_executable(E_2019_11_17T01.Reporter "${E_2019_11_17}01. Reporter.cpp")
add_executable(E_2019_11_17T02.SquareManipulator "${E_2019_11_17}02. Square Manipulator.cpp")
add_executable(E_2019_11_17T03.AlgebraHelper "${E_2019_11_17}03. Algebra Helper.cpp")
add_executable(E_2019_11_17T04.MayanCalculator "${E_2019_11_17}04. Mayan Calculator.cpp")

set(E_2019_11_24 "${EXAMS}2019.11.24/")
add_executable(E_2019_11_24T01.Punctuation "${E_2019_11_24}01. Punctuation.cpp")
add_executable(E_2019_11_24T02.GarbageSorting "${E_2019_11_24}02. Garbage Sorting.cpp")
add_executable(E_2019_11_24T03.Twins "${E_2019_11_24}03. Twins.cpp")
add_executable(E_2019_11_24T04.Bomberman "${E_2019_11_24}04. Bomberman.cpp")

set(E_2020_05_30 "${EXAMS}2020.05.30/")
add_executable(E_2020_05_30T01.ShoppingList "${E_2020_05_30}01. Shopping List.cpp")
add_executable(E_2020_05_30T02.SumOfOdds "${E_2020_05_30}02. Sum Of Odds.cpp")
add_executable(E_2020_05_30T03.CoffeeShop "${E_2020_05_30}03. Coffee Shop.cpp")

set(E_2020_06_06 "${EXAMS}2020.06.06/")
add_executable(E_2020_06_06T01.SortingPlayers "${E_2020_06_06}01. Sorting Players.cpp")
add_executable(E_2020_06_06T02.Space "${E_2020_06_06}02. Space.cpp")
add_executable(E_2020_06_06T03.PetExhibition "${E_2020_06_06}03. Pet Exhibition.cpp")

set(E_2021_03_PREP "${EXAMS}2021.03-ExamPrep/")
add_executable(E_2021_03_PREP_T01.ReverseWords "${E_2021_03_PREP}01. Reverse Words.cpp")
add_executable(E_2021_03_PREP_T02.NumeralSystem "${E_2021_03_PREP}02. Numeral System.cpp")
add_executable(E_2021_03_PREP_T03.UltimateReverseWords "${E_2021_03_PREP}03. Ultimate Reverse Words.cpp")

set(E_2021_05_08 "${EXAMS}2021.05.08/")
add_executable(E_2021_05_08_T01.BelowAverageOnly "${E_2021_05_08}01. Below Average Only.cpp")
add_executable(E_2021_05_08_T02.SpecialItems "${E_2021_05_08}02. Special Items.cpp")
add_executable(E_2021_05_08_T02.MachineCommands "${E_2021_05_08}03. Machine Commands.cpp")

set(E_2021_05_15 "${EXAMS}2021.05.15/")
add_executable(E_2021_05_15_T01.Top5Elements "${E_2021_05_15}01. Top 5 Elements.cpp")
add_executable(E_2021_05_15_T02.SecretMessage "${E_2021_05_15}02. Secret Message.cpp")
add_executable(E_2021_05_15_T03.DiffChecker "${E_2021_05_15}03. Diff Checker.cpp")

set(E_2023_04_22 "${EXAMS}2023.04.22/")
add_executable(E_2023_04_22_T01.FunSequence "${E_2023_04_22}01. Fun Sequence.cpp")
add_executable(E_2023_04_22_T03.Punctuation "${E_2023_04_22}03. Punctuation.cpp")
